--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -7,7 +7,9 @@ import { getCollection } from 'astro:content';
 
 export async function getStaticPaths() {
   const posts = await getCollection('blog');
-  return posts.map((post) => ({
+  return posts
+    .filter((post) => post && post.data)
+    .map((post) => ({
     params: { slug: post.slug },
     props: { post },
   }));
@@ -37,7 +39,7 @@ const { Content } = await post.render();
       
       <div class="post-info">
         <div class="post-tags">
-          {post.data.tags.map((tag) => (
+          {(post.data.tags || []).map((tag) => (
             <span class="post-tag">#{tag}</span>
           ))}
         </div>
