--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -164,8 +164,10 @@ const { Content } = await post.render();
 
   .post-author-info {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    align-items: center;
     gap: var(--spacing-xs);
+    width: 100%;
   }
 
   .post-author {
@@ -177,6 +179,8 @@ const { Content } = await post.render();
   .post-reading-time {
     color: var(--color-text-light);
     font-size: var(--font-size-sm);
+    margin-left: auto;
+    text-align: right;
   }
 
   .post-source-info {
@@ -323,6 +327,11 @@ const { Content } = await post.render();
     
     .post-title {
       font-size: var(--font-size-3xl);
+    }
+    
+    .post-author-info {
+      flex-direction: column;
+      align-items: flex-start;
     }
   }
 </style>
